--- a/test-output/old/suite/methods-alphabetical.html
+++ b/test-output/old/suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
-<h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b67094">  <td>22/08/14 20:21:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoBlaze.Dropdown()[pri:0, instance:practice.DemoBlaze@436a4e4b]">Dropdown</td> 
-  <td>main@2061347276</td>   <td></td> </tr>
-<tr bgcolor="867862">  <td>22/08/14 20:22:36</td>   <td>63518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonOpen.OpeoAmazon()[pri:0, instance:practice.AmazonOpen@5db45159]">OpeoAmazon</td> 
-  <td>main@2061347276</td>   <td></td> </tr>
+<tr bgcolor="ad8c79">  <td>22/08/16 17:45:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderDemo.TestCaseGoogleSearch(java.lang.String,java.lang.String)[pri:0, instance:com.amrut1.DataProviderDemo@53ca01a2]">TestCaseGoogleSearch</td> 
+  <td>main@1472465</td>   <td></td> </tr>
+<tr bgcolor="ad8c79">  <td>22/08/16 17:45:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderDemo.TestCaseGoogleSearch(java.lang.String,java.lang.String)[pri:0, instance:com.amrut1.DataProviderDemo@53ca01a2]">TestCaseGoogleSearch</td> 
+  <td>main@1472465</td>   <td></td> </tr>
+<tr bgcolor="ad8c79">  <td>22/08/16 17:45:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderDemo.TestCaseGoogleSearch(java.lang.String,java.lang.String)[pri:0, instance:com.amrut1.DataProviderDemo@53ca01a2]">TestCaseGoogleSearch</td> 
+  <td>main@1472465</td>   <td></td> </tr>
 </table>
